tests/type_errors/total_records_to_big.sy
def f
  : { a : Int } -> Int
  : { b } = b

--+ expected exit status: 7
--+ expected stderr:
--+ > While checking label "b".
--+ > There are extra labels in one record.
--+ 
--+ ([(a: Int), (b: _)] => Record)
--+ ----
--+ ([(a: Int)] => Record)
--+ 
--+   1| def f
--+      ^^^^^

